package Classes;

import Interfaces.ICarry;

import java.util.ArrayList;
import AbstractClasses.*;

public class SingleGroup extends GroupCarry {
    public SingleGroup(ArrayList<ICarry> Carries){
        super(Carries);
    }
}
