package Interfaces;

public interface ICarry extends Called{
    public void carry(Objectable objectable, String newPlace);
}
