package Interfaces;

import Classes.Material;

public interface IFossily {
    public void productes(Material material, int time);
}
