package Interfaces;

public interface ILying {
    public void lay(String bed);
}
