package Interfaces;

public interface ISpeak {
    public void say(String phrase);
}
