@startuml
interface Interfaces.ILying {
+ void lay(String)
}
enum Enums.MaterialsName {
+  LUNIT
+  ANTILUNIT
}
abstract class AbstractClasses.GroupCarry {
- ArrayList<ICarry> Carries
+ ArrayList<ICarry> getCarriers()
+ void setCarriers(ArrayList<ICarry>)
+ void groupCarry(Objectable,String)
}
interface Interfaces.Called {
+ String getName()
+ void setName(String)
}
class Classes.Seledochka {
+ void carry(Objectable,String)
}
class Classes.Fucsia {
+ void carry(Objectable,String)
}
interface Interfaces.IFossily {
+ void productes(Material,int)
}
class Classes.Znayka {
+ void carry(Objectable,String)
+ void say(String)
}
class Classes.Neznayka {
- ArrayList<String> clothes
+ ArrayList<String> getClothes()
+ void setClothes(ArrayList<String>)
+ void showClothes()
+ void takeOffCloth(String)
+ void lay(String)
}
class Classes.Pilulkin {
+ void carry(Objectable,String)
}
interface Interfaces.ISpeak {
+ void say(String)
}
class Classes.SingleGroup {
}
interface Interfaces.Existing {
+ String getLocation()
+ void setLocation(String)
}
class MainClass_TheWonderfulStory {
+ {static} void main(String[])
}
class Classes.Material {
- int massPerMeter3
- MaterialsName materialsName
+ int getMassPerMeter3()
+ void setMassPerMeter3(int)
+ MaterialsName getMaterialsName()
+ void setMaterialsName(MaterialsName)
}
class Classes.Fossiler {
+ void productes(Material,int)
}
interface Interfaces.Objectable {
}
interface Interfaces.Movable {
+ void move(String)
}
abstract class AbstractClasses.Human {
- String name
- String location
+ void setName(String)
+ String getName()
+ String getLocation()
+ void setLocation(String)
+ String toString()
+ boolean equals(Object)
+ int hashCode()
+ void move(String)
}
interface Interfaces.ICarry {
+ void carry(Objectable,String)
}
interface Interfaces.Dressable {
+ ArrayList<String> getClothes()
+ void setClothes(ArrayList<String>)
+ void showClothes()
+ void takeOffCloth(String)
}


Interfaces.ICarry <|.. Classes.Seledochka
Classes.Human <|-- Classes.Seledochka
Interfaces.ICarry <|.. Classes.Fucsia
Classes.Human <|-- Classes.Fucsia
Interfaces.ICarry <|.. Classes.Znayka
Interfaces.ISpeak <|.. Classes.Znayka
Interfaces.Objectable <|.. Classes.Znayka
Classes.Human <|-- Classes.Znayka
Interfaces.Objectable <|.. Classes.Neznayka
Interfaces.Dressable <|.. Classes.Neznayka
Interfaces.ILying <|.. Classes.Neznayka
Classes.Human <|-- Classes.Neznayka
Interfaces.ICarry <|.. Classes.Pilulkin
Classes.Human <|-- Classes.Pilulkin
Classes.GroupCarry <|-- Classes.SingleGroup
Classes.IFossily <|.. Classes.Fossiler
Interfaces.Movable <|-- Interfaces.Objectable
Interfaces.Called <|-- Interfaces.Objectable
Interfaces.Existing <|-- Interfaces.Objectable
AbstractClasses.Objectable <|.. AbstractClasses.Human
Interfaces.Called <|-- Interfaces.ICarry
@enduml